--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "authors": [
         {
             "name": "Mikael Roos",
-            "email": "mos@dbwebb.se",
-            "role": "lead"
+            "email": "mos@dbwebb.se"
         }
     ],
     "support": {
@@ -22,7 +21,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
-        "anax/anax-flat": "^1.0.6"
+        "anax/anax-flat": "^1.0.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
