--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     "autoload": {
         "psr-4": {"Anax\\": "src/"}
     },
-    "minimum-stability": "alpha",
+    "minimum-stability": "beta",
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
-        "anax/anax-flat": "^1.0.8"
+        "anax/anax-flat": "^1.0.10"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
