--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,24 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
-        "anax/anax-flat": "^1.1.0"
+        "anax/cache": "^2.0.0@beta",
+        "anax/commons": "^2.0.0@beta",
+        "anax/configure": "^2.0.0@beta",
+        "anax/content": "^2.0.0@beta",
+        "anax/controller": "^2.0.0@beta",
+        "anax/di": "^2.0.0@beta",
+        "anax/navigation": "^2.0.0@beta",
+        "anax/page": "^2.0.0@beta",
+        "anax/response": "^2.0.0@beta",
+        "anax/request": "^2.0.0@beta",
+        "anax/router": "^2.0.0@beta",
+        "anax/session": "^2.0.0@beta",
+        "anax/stylechooser": "^2.0.0@beta",
+        "anax/textfilter": "^1.2.3",
+        "anax/url": "^2.0.0@beta",
+        "anax/view": "^2.0.0@beta",
+        "mos/cimage": "^0.7.20",
+        "symfony/yaml": "^3.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
