Remove dependency to anax-flat and anax-lite.

--- a/composer.json
+++ b/composer.json
@@ -22,22 +22,22 @@
     "require": {
         "php": "^7.2",
         "anax/cache": "^2.0.0@beta",
-        "anax/commons": "^2.0.0@beta",
+        "anax/commons": "^2.0.3",
         "anax/configure": "^2.0.0@beta",
         "anax/content": "^2.0.0@beta",
-        "anax/controller": "^2.0.0@beta",
-        "anax/di": "^2.0.0@beta",
+        "anax/controller": "^2.0.1",
+        "anax/di": "^2.0.4",
         "anax/navigation": "^2.0.0@beta",
         "anax/page": "^2.0.0@beta",
-        "anax/response": "^2.0.0@beta",
-        "anax/request": "^2.0.0@beta",
-        "anax/router": "^2.0.0@beta",
-        "anax/session": "^2.0.0@beta",
+        "anax/response": "^2.0.1",
+        "anax/request": "^2.0.2",
+        "anax/router": "^2.0.0",
+        "anax/session": "^2.0.1",
         "anax/stylechooser": "^2.0.0@beta",
-        "anax/textfilter": "^1.2.3",
+        "anax/textfilter": "^1.2.5",
         "anax/url": "^2.0.0@beta",
-        "anax/view": "^2.0.0@beta",
-        "mos/cimage": "^0.7.20",
+        "anax/view": "^2.0.2",
+        "mos/cimage": "^0.7.21",
         "symfony/yaml": "^3.4.0"
     },
     "require-dev": {
